cluster/apps/sonarr/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr
          ports:
            - containerPort: 8989
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "2Gi"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tv
              mountPath: /tv
            - name: downloads
              mountPath: /downloads
            - name: media
              mountPath: /TheBarns/Media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: tv
          persistentVolumeClaim:
            claimName: sonarr-tv
        - name: downloads
          persistentVolumeClaim:
            claimName: sonarr-downloads
        - name: media
          persistentVolumeClaim:
            claimName: sonarr-media
