cluster/apps/sonarr/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Sonarr TV Series Manager
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media Management
    gethomepage.dev/icon: sh-sonarr
    gethomepage.dev/name: Sonarr
    gethomepage.dev/pod-selector: app.kubernetes.io/name=sonarr
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - sonarr.internal.gustend.net
      secretName: sonarr-internal-gustend-net-cert
  rules:
    - host: sonarr.internal.gustend.net
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
