cluster/apps/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
  annotations:
    gethomepage.dev/description: Sonarr TV Series Manager
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media Management
    gethomepage.dev/icon: sh-sonarr
    gethomepage.dev/name: Sonarr
    gethomepage.dev/pod-selector: app.kubernetes.io/name=sonarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - sonarr.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: sonarr
          port: 8989
          weight: 1
